syntax = "proto3";

option go_package = "/psm";

package process_manager;

message Screen{
    message Resolution{
        uint32 width = 1;
        uint32 height = 2;
    }

    enum Panel{
        UNKNOWN = 0;
        LCD = 1;
        IPS = 2;
        OLED = 3;
    }

    float size_inch = 1;
    Resolution resolution = 2;
    Panel panel = 3;
    bool multi_touch = 4;
}